--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^12.2.0",
     "eslint": "^7.3.1",
     "node-cron": "^2.0.3",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "pastebin-ts": "^1.2.0"
   }
 }
