--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
     "pastebin-ts": "^1.2.0",
-    "queue-promise": "^2.1.0",
-    "rate-limiter-flexible": "^2.1.15"
+    "queue-promise": "^2.1.0"
   }
 }
