--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
     "pastebin-ts": "^1.2.0",
+    "perf_hooks": "0.0.1",
     "queue-promise": "^2.1.0"
   }
 }
