--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "penguin",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.2.0",
-    "eslint": "^7.3.1",
-    "node-cron": "^2.0.3",
+    "@discordjs/builders": "^0.5.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "discord.js": "^13.0.1",
+    "eslint": "^7.32.0",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.0",
     "pastebin-ts": "^1.2.0",
     "perf_hooks": "0.0.1",
-    "queue-promise": "^2.1.0"
+    "queue-promise": "^2.2.1"
   }
 }
