--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.0.1",
     "eslint": "^7.32.0",
+    "mongodb": "^4.1.1",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.0",
     "pastebin-ts": "^1.2.0",
     "perf_hooks": "0.0.1",
     "queue-promise": "^2.2.1"
   },
-  "engines": { 
+  "engines": {
     "node": "16.6.1",
     "npm": "7.20.3"
   }
