--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/builders": "^0.5.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.0.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "mongodb": "^4.1.1",
     "node-cron": "^3.0.0",
