--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "src bot",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .js --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "penguin",
@@ -13,7 +14,6 @@
     "@discordjs/rest": "^0.3.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.10.0",
     "mongodb": "^4.4.0",
     "node-cron": "^3.0.0",
     "node-fetch": "^3.2.0",
@@ -23,5 +23,8 @@
   "engines": {
     "node": "16.6.1",
     "npm": "7.20.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0"
   }
 }
