--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-cron": "^3.0.1",
     "node-fetch": "^3.2.6",
     "perf_hooks": "0.0.1",
-    "queue-promise": "^2.2.1"
+    "queue-promise": "^2.2.1",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "16.6.1",
