--- a/package.json
+++ b/package.json
@@ -4,23 +4,21 @@
   "description": "src bot",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint . --ext .js --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ext .js --fix"
   },
-  "author": "penguin",
+  "author": "Nick-NCSU",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^1.10.1",
-    "@discordjs/rest": "^1.7.1",
-    "discord.js": "^14.18.0",
+    "@discordjs/builders": "^1.11.2",
+    "@discordjs/rest": "^2.5.0",
+    "discord.js": "^14.19.3",
     "dotenv": "^16.4.7",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "uuid": "^9.0.1"
   },
   "engines": {
-    "node": "20",
-    "npm": "10.7.0"
+    "node": "24"
   },
   "devDependencies": {
     "eslint": "^8.57.1"
