Update environment handling

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-token=""
-id=""
-guildid=""
-hypixel=""
-mongourl=""
-srcapi=""
+APPLICATION_TOKEN=""
+APPLICATION_ID=""
+GUILD_ID=""
+HYPIXEL_API_KEY=""
+SRC_API_KEY=""
